rebirth-responsive: leasing page overflow fix

--- a/src/modules/app/less/app.less
+++ b/src/modules/app/less/app.less
@@ -291,7 +291,6 @@ md-toolbar:not(.md-menu-toolbar) {
 .leasing-page {
   height: 100%;
   max-height: calc(~'100vh - 90px');
-  overflow: hidden;
 
   .left-panel {
     height: 100%;
